[package]
name = "mines-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
jni = "0.21.1"
android_logger = "0.13"
mines = { path = "../mines"}
jni_macro = { path = "jni_macro" }

[lib]
name = "mm"
# 编译类型 cdylib 指定为动态库
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[workspace]
members = [
  "jni_macro",
]
exclude = [
  "test"
]